# slot-engine-cpp

./: CMakeLists.txt  README.md
include/: game_config.h  payline.h  paytable.h  reel.h  screen.h  slot_engine.h  spin_engine.h  spin_result.h  symbol.h  win_evaluator.h  winning_line.h
src/: game_config.cpp  paytable.cpp  reel.cpp  screen.cpp  slot_engine.cpp  spin_engine.cpp  win_evaluator.cpp
tests/: main.cpp
